Update UpdatesService.java